tests/Checker/everything/errors/11e.vc
int a[1];
void f() { }
int main() {
        a;
        f;

        return 1;
}